subject : gap is not working in safari old browser... issue fixed

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -221,3 +221,7 @@
     // ============== FONT SIZE ===========================
 
 }
+
+
+.safari_version_less_14_2 .setting-profile-icons span{margin-right: 10px;}
+.safari_version_less_14_2 .count-show-frame .count-card{margin-bottom: 10px;}
